RESOLVED FIXED 257513
[iOS] Safari hangs under sync IPC when requesting autocorrection context
https://bugs.webkit.org/show_bug.cgi?id=257513
Summary [iOS] Safari hangs under sync IPC when requesting autocorrection context
Abrar Rahman Protyasha
Reported 2023-05-30 16:54:26 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2023-05-30 17:05:35 PDT
EWS
Comment 2 2023-05-31 11:30:10 PDT
Committed 264745@main (caddd0f8263c): <https://commits.webkit.org/264745@main> Reviewed commits have been landed. Closing PR #14506 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.